updatng the post-test requirements

--- a/syllabus/syllabus_WTR_2018_505F_mienko.Rmd
+++ b/syllabus/syllabus_WTR_2018_505F_mienko.Rmd
@@ -138,7 +138,7 @@ Discussion of case material may occur in class. All classroom discussions about 
 
 ## Grading Policy (See Table 1 for the Specific Grading Scale)
 
-- **10%** of your grade will be based on your participation in a pre/post test assessing your knowledge at the start and end of this quarter. This test will be graded on a credit/no-credit basis. The pre-test will be posted online within the first two weeks of the quarter. The post-test will be posted online during the final exam week. 
+- **10%** of your grade will be based on your participation in a post test assessing your knowledge at end of this quarter. This test will be graded on a credit/no-credit basis. The test will be posted online within the first two weeks of the quarter. The test will be posted online during the final exam week. 
 
 - **20%** of your grade will be determined by an "evidence-based investigative assessment" that you will complete based on data, assessment tools, and other information provided by me. 
 
